<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cancel_an_alarm">Cancel an Alarm</string>

    <string name="help">Help</string>
    <string name="share_invite">Share/invite Someone</string>
    <string name="time_watcher">Time Watcher</string>
    <string name="video_editor_tools">Video Editor Tools</string>
    <string name="time_zone_converter">Time Zone Converter</string>
    <string name="rate_app">Rate App</string>
    <string name="view_more">View More</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="invitation_message">"Please try 'SMS Scheduler' application to schedule your important messages on time!"</string>
    <string name="about_no_email">"There is no email client installed."</string>

    <string name="app_id_admob">ca-app-pub-4701981589622742~4602021510</string>
    <string name="interstitial_id_main_screen">ca-app-pub-4701981589622742/6078754710</string>
    <string name="interstitial_id_cancel_alarm_screen">ca-app-pub-4701981589622742/7276286313</string>
    <string name="native_ad_id">ca-app-pub-4701981589622742/7910952990</string>
</resources>